--- a/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
@@ -27,7 +27,7 @@
         }
         }
         <div class="col-auto">
-            <button type="submit" asp-action="SelectAuthors" id="ModifyAuthors" name="ModifyAuthors" class="btn btn-outline-primary btn-lg d-inline" title="Select authors">
+            <button type="button" onclick="javascript:SelectAuthors();" id="ModifyAuthors" name="ModifyAuthors" class="btn btn-outline-primary btn-lg d-inline" title="Select authors">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
                     <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z" />
                 </svg>
@@ -126,6 +126,21 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<div id="partialModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     <script type="text/javascript">
         $("form[formhelper] :submit").on("click", (element) => {
@@ -149,6 +164,39 @@
                 document.forms[0].attributes.action.value = '/Books/' + actionName;
                 document.forms[0].submit();
             }
+        }
+
+        function SelectAuthors() {
+            var token = $('input[name="__RequestVerificationToken"]').val();
+            var title = document.getElementById("Title").value;
+            var id = document.getElementById("Id").value;
+            var jqxhr;
+            if (id == '0')
+            {
+                jqxhr = $.ajax({
+                    method: "PUT",
+                    url: "/Books/SelectAuthorsForBook",
+                    data: {"title": title, "__RequestVerificationToken": token },
+                    dataType: "html"
+                });
+            }
+            else
+            {
+                jqxhr = $.ajax({
+                    method: "POST",
+                    url: "/Books/SelectAuthorsForBook",
+                    data: { "id": id, "__RequestVerificationToken": token },
+                    dataType: "html"
+                });
+            }
+        
+            jqxhr.done(function (response) {
+                $("#partialModal").find(".modal-body").html(response);
+                $("#partialModal").modal('show');
+            })
+            .fail(function (response) {
+                fhToastr.error(response.responseText);
+            });
         }
     </script>
 
