--- a/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
@@ -2,46 +2,41 @@
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-<form enctype="multipart/form-data" method="post" asp-formhelper="true" asp-action="UpsertBook">
+<form enctype="multipart/form-data" method="post" asp-formhelper="true" asp-action="UpsertBook" id="upsertBookForm">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Title" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <input asp-for="Title" class="form-control" />
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Authors" class="col-sm-3 col-form-label"></label>
-        <input asp-for="Authors" type="hidden" />
-
-        @{
-            var authors = string.Join(", ", @Model.Authors.Select(a => a.Description));
-            if (!string.IsNullOrWhiteSpace(authors))
-        {
-            <div class="col-sm-auto col-auto" id="authorsDiv">
-                @authors
-                <span asp-validation-for="Authors" class="text-danger"></span>
+        <div class="col-sm-9">
+            <div class="hstack">
+                @{
+                    var authors = string.Join(", ", @Model.Authors.Select(a => a.Description));
+                }
+                <span id="authors" class="mx-2 align-self-center d-inline-flex flex-wrap justify-content-center text-wrap">@authors</span>
+                <button type="button" onclick="javascript:SelectAuthors();" id="ModifyAuthors" name="ModifyAuthors" class="btn btn-outline-primary btn-lg d-inline" title="Select authors">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                        <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z" />
+                    </svg>
+                </button>
             </div>
-        }
-        }
-        <div class="col-auto">
-            <button type="button" onclick="javascript:SelectAuthors();" id="ModifyAuthors" name="ModifyAuthors" class="btn btn-outline-primary btn-lg d-inline" title="Select authors">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
-                    <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z" />
-                </svg>
-            </button>
+            <span class="text-danger" id="authorsError" style="display: none;">Specify the author of the book.</span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="OriginalTitle" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <input asp-for="OriginalTitle" class="form-control" />
             <span asp-validation-for="OriginalTitle" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="OriginalLanguageCode" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <select asp-for="OriginalLanguageCode" class="form-control" asp-items="@ViewBag.Languages" >
@@ -50,23 +45,22 @@
             <span asp-validation-for="OriginalLanguageCode" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Year" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <input asp-for="Year" class="form-control" />
             <span asp-validation-for="Year" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Edition" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <input asp-for="Edition" class="form-control" />
             <span asp-validation-for="Edition" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Genres" class="col-sm-3 col-form-label"></label>
-        <input asp-for="Genres" type="hidden" />
         @{
             var genres = string.Join(", ", Model.Genres.Select(g => g.Description));
             if (!string.IsNullOrWhiteSpace(genres))
@@ -86,14 +80,14 @@
             </button>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Description" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <textarea asp-for="Description" class="form-control"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="Series" class="col-sm-3 col-form-label"></label>
         <input asp-for="Series" type="hidden" />
         @if (!string.IsNullOrWhiteSpace(Model.Series?.Description))
@@ -110,7 +104,7 @@
             </button>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
         <label asp-for="NumberInSeries" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <input asp-for="NumberInSeries" class="form-control" />
@@ -133,7 +127,7 @@
                 <h4 class="modal-title"></h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body pb-0">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -144,6 +138,8 @@
 
 @section Scripts {
     <script type="text/javascript">
+        document.addEventListener("submit", (event) => CheckAuthors());
+
         $("form[formhelper] :submit").on("click", (element) => {
             var button = element.currentTarget;
             var action = button.getAttribute("formaction");
@@ -153,6 +149,19 @@
         var year = document.getElementById("Year");
         year.addEventListener("click", (event) => YearFirstClicked());
         year.addEventListener("focus", (event) => YearFirstClicked());
+
+        function CheckAuthors()
+        {
+            var authors = document.getElementById("authors").innerText;
+            if(authors.trim().length > 0)
+            {
+                $("#authorsError").hide();
+            }
+            else
+            {
+                $("#authorsError").show();
+            }
+        }
 
         function YearFirstClicked() {
             if (!year.value) {
