--- a/TitlesOrganizer.Web/Views/Books/_SelectSeriesForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_SelectSeriesForBook.cshtml
@@ -1,48 +1,9 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListAuthorForBookVM
-<form enctype="multipart/form-data" method="post" id="selectAuthors" asp-action="FinalizeSelectAuthorsForBook" onsubmit="SelectAuthorsSubmit(event);" >
+﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListSeriesForBookVM
+<form enctype="multipart/form-data" method="post" id="selectSeries" asp-action="FinalizeSelectSeriesForBook" onsubmit="SelectSeriesSubmit(event);">
     <input type="hidden" asp-for="Item.Id" name="bookId" id="bookId" />
     <input type="hidden" asp-for="Item.Description" />
     <div class="card w-100">
-        <div class="card-header d-flex w-100 mb-1 bg-body-tertiary border-0 align-items-center">
-            <h5>Previously selected authors</h5>
-        </div>
-        @if (Model.SelectedValues.Count > 0)
-        {
-            <ul class="list-group list-group-flush" id="selectedAuthors">
-                @{
-                    int selectedIndex = 0;
-                    foreach (var author in Model.SelectedValues)
-                    {
-                        var id = $"selectedAuthor_{selectedIndex}";
-                        <li class="list-group-item list-group-item-action">
-                            @if (author.IsForItem)
-                            {
-                                <input type="checkbox" class="form-check-input" value="@author.Id" checked id="@id" name="ids" />
-                            }
-                            else
-                            {
-                                <input type="checkbox" class="form-check-input" value="@author.Id" id="@id" name="ids" />
-                            }
-
-                            <label class="form-check-label" for="@id">
-                                @author.Description
-                            </label>
-                        </li>
-                        selectedIndex++;
-                    }
-                }
-            </ul>
-        }
-        else
-        {
-            <div class="card-body">
-                <small><i>No previously selected authors</i></small>
-            </div>
-        }
-    </div>
-    <div class="card w-100">
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center ">
-            <h5>Other authors</h5>
             <div class="row">
                 <div class="mb-1">
                     <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive" title="Toogle filters">
@@ -63,13 +24,13 @@
                             </div>
                             <div class="list-group-item flex-fill bg-body-tertiary border-0">
                                 <select class="form-select" name="pageSize" asp-for="Paging.PageSize" onchange="javascript:$(this.form).trigger('submit')">
-                                    <option value="3">3 authors on page</option>
-                                    <option value="5">5 authors on page</option>
-                                    <option value="10">10 authors on page</option>
-                                    <option value="15">15 authors on page</option>
-                                    <option value="20">20 authors on page</option>
-                                    <option value="50">50 authors on page</option>
-                                    <option value="100">100 authors on page</option>
+                                    <option value="3">3 book series on page</option>
+                                    <option value="5">5 book series on page</option>
+                                    <option value="10">10 book series on page</option>
+                                    <option value="15">15 book series on page</option>
+                                    <option value="20">20 book series on page</option>
+                                    <option value="50">50 book series on page</option>
+                                    <option value="100">100 book series on page</option>
                                 </select>
                             </div>
                             <div class="list-group-item flex-fill bg-body-tertiary border-0">
@@ -85,37 +46,46 @@
         </div>
         <ul class="list-group list-group-flush">
             @{
-                int otherIndex = 0;
-                foreach (var author in Model.Values)
+                int index = 0;
+                foreach (var series in Model.Values)
                 {
-                    var id = $"otherAuthor_{otherIndex}";
+                    var id = $"series_{index}";
                     <li class="list-group-item list-group-item-action">
-                        @if (author.IsForItem)
+                        @if (series.IsForItem)
                         {
-                            <input type="checkbox" class="form-check-input" value="@author.Id" checked id="@id" name="ids" />
+                            <input type="radio" class="form-check-input" value="@series.Id" checked id="@id" name="id" />
                         }
                         else
                         {
-                            <input type="checkbox" class="form-check-input" value="@author.Id" id="@id" name="ids" />
+                            <input type="radio" class="form-check-input" value="@series.Id" id="@id" name="id" />
                         }
 
                         <label class="form-check-label" for="@id">
-                            @author.Description
+                            @series.Description
                         </label>
                     </li>
-                    otherIndex++;
+                    index++;
                 }
             }
             <li class="list-group-item list-group-item-action input-group">
-                <button type="button" title="Add new author" onclick="javascript:AddNewAuthor(event);">
+                <button type="button" title="Add new book series" onclick="javascript:AddNewSeries(event);">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
                     </svg>
                 </button>
-                <input id="newAuthorName" name="newAuthorName" placeholder="Name" onchange="javascript:HideNewAuthorError();" />
-                <input id="newAuthorLastName" name="newAuthorLastName" placeholder="Last Name" onchange="javascript:HideNewAuthorError();" />
-                <span class="text-danger" id="newAuthorError" style="display: none;">Enter name or/and last name of the author.</span>
+                <div class="d-inline-flex flex-wrap">
+                    <div class="flex-fill">
+                        <input class="w-100" id="newSeriesTitle" name="newSeriesTitle" placeholder="Title" onchange="javascript:HideNewSeriesError();" />
+                    </div>
+                    <div class="flex-fill">
+                        <input class="w-100" id="newSeriesOriginalTitle" name="newSeriesOriginalTitle" placeholder="Original title" onchange="javascript:HideNewSeriesError();" />
+                    </div>
+                    <div class="flex-fill flex-grow-1 w-100">
+                        <textarea class="w-100" id="newSeriesDescription" name="newSeriesDescription" placeholder="Description" onchange="javascript:HideNewSeriesError();"></textarea>
+                    </div>
+                </div>
+                <span class="text-danger" id="newSeriesError" style="display: none;"></span>
             </li>
         </ul>
         <div class="card-footer justify-content-center">
@@ -172,7 +142,7 @@
         </div>
     </div>
     <div class="row sticky-bottom">
-        <input type="submit" value="Select authors" class="btn btn-primary btn-lg" data-bs-dismiss="modal" onclick="javascript:CloseModal()"/>
+        <input type="submit" value="Select book series" class="btn btn-primary btn-lg" data-bs-dismiss="modal" onclick="javascript:CloseModal()" />
         <input type="hidden" value="false" name="closeModal" id="closeModal" />
     </div>
 </form>
