--- a/TitlesOrganizer.Web/Views/Books/Books.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Books.cshtml
@@ -46,27 +46,13 @@
     <p class="row">
         <a href="/Books/CreateNew" class="col">Create New</a>
     </p>
-    <div class="row">
-        <table class="table" id="BooksGrid">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-            @foreach (var book in Model.Values) {
-                <tr>
-                    <td>@Html.DisplayFor(modelItem => book.Description)</td>
-                    <td>
-                        <a href=@($"/Books/Update/{book.Id}")>Edit</a> |
-                        <a class="details" href="javascript:ShowDetails(@book.Id);">Details</a> |
-                        @Html.ActionLink("Delete", "Delete", new { id = book.Id })
-                    </td>
-                </tr>
-            }
-            </tbody>
-        </table>
+    <div class="list-group" id="BooksGrid">
+        @foreach (var book in Model.Values)
+        {
+            <button type="button" class="details list-group-item list-group-item-action list-group-item-primary" onclick="javascript:ShowDetails(@book.Id);" title="Show details">
+                @Html.DisplayFor(modelItem => book.Description)
+            </button>
+        }
     </div>
     <div class="row justify-content-center">
         @{
