--- a/TitlesOrganizer.Web/Views/Shared/_Layout.cshtml
+++ b/TitlesOrganizer.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,8 +37,61 @@
                                 <li><a class="dropdown-item" asp-controller="Books" asp-action="Series">Book series</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item py-2 py-md-1 col-12 col-md-auto">
+                            <div class="vr d-none d-md-flex h-100 mx-md-2"></div>
+                            <hr class="d-md-none my-2">
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
+                    <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+                        <li class="nav-item py-2 py-md-1 col-12 col-md-auto">
+                            <div class="vr d-none d-md-flex h-100 mx-md-2"></div>
+                            <hr class="d-md-none my-2">
+                        </li>
+                        <li class="nav-item dropdown">
+                            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                                <symbol id="circle-half" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"></path>
+                                </symbol>
+                                <symbol id="moon-fill" viewBox="0 0 16 16">
+                                    <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path>
+                                </symbol>
+                                <symbol id="sun-fill" viewBox="0 0 16 16">
+                                    <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
+                                </symbol>
+                                <symbol id="check2" viewBox="0 0 16 16">
+                                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
+                                </symbol>
+                            </svg>
+                            <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme">
+                                <svg class="bi my-1 theme-icon-active" fill="currentColor" width="16" height="16"><use href=""></use></svg>
+                                <span class="d-lg-none ms-2" id="bd-theme-text">Toggle theme</span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme-text">
+                                <li>
+                                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto" aria-pressed="false" onclick="javascript:ChangeTheme($(this));">
+                                        <svg class="bi me-2 opacity-50 theme-icon" fill="currentColor" width="16" height="16"><use href="#circle-half"></use></svg>
+                                        Auto
+                                        <svg class="bi ms-auto d-none" fill="currentColor" width="16" height="16"><use href="#check2"></use></svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false" onclick="javascript:ChangeTheme($(this));">
+                                        <svg class="bi me-2 opacity-50 theme-icon" fill="currentColor" width="16" height="16"><use href="#sun-fill"></use></svg>
+                                        Light
+                                        <svg class="bi ms-auto d-none" fill="currentColor" width="16" height="16"><use href="#check2"></use></svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false" onclick="javascript:ChangeTheme($(this));">
+                                        <svg class="bi me-2 opacity-50 theme-icon" fill="currentColor" width="16" height="16"><use href="#moon-fill"></use></svg>
+                                        Dark
+                                        <svg class="bi ms-auto d-none" fill="currentColor" width="16" height="16"><use href="#check2"></use></svg>
+                                    </button>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -59,6 +112,28 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.jsdelivr.net/gh/sinanbozkus/remotemodal/remotemodal.js"></script>
     <script type="text/javascript">
+        $(function() {
+            if (localStorage.getItem("theme") == null)
+            {
+                localStorage.setItem("theme", "auto");
+            }
+
+            var theme = localStorage.getItem("theme");
+            var element = $("#bd-theme ~ ul:first button[data-bs-theme-value=" + theme + "]");
+            ChangeTheme(element);
+        });
+
+        function ChangeTheme(jQElement){
+            var theme = jQElement.attr("data-bs-theme-value");
+            $("html").attr("data-bs-theme", theme);
+            localStorage.setItem("theme", theme);
+            jQElement.closest("ul").find("button.active").attr("aria-pressed", "false").removeClass("active").find("svg:last").addClass("d-none");
+            jQElement.attr("aria-pressed", "true").addClass("active").find("svg:last").removeClass("d-none");
+            var icon = jQElement.find("svg.theme-icon > use").attr("href");
+            $("#bd-theme > svg.theme-icon-active > use").attr("href", icon);
+            $("#bd-theme").attr("aria-label", "Toggle theme (" + theme + ")");
+        }
+
         $(document).on('click', '[data-form-submit][data-form-action]', function (event) {
             var $this = $(this);
             var formAction = $this.attr('data-form-action');
